;Judge/Temporary_Error/136.log
  File "./temp/136/code.py", line 1
    sximport sys
               ^
SyntaxError: invalid syntax

